[workspace]
members = [
    "programs/*",
    "tip-distribution-cli",
    "tip-payment-cli",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
incremental = false

[workspace.dependencies]
anchor-lang = { version = "0.31.1" }
bincode = "1.3.3"
jito-programs-vote-state = { path = "programs/vote-state" }
jito-tip-distribution = { features = ["no-entrypoint", "no-idl"], path = "programs/tip-distribution" }
serde = "1.0.138"
serde_derive = "1.0.103"
solana-program = "2.1"
solana-program-test = "2.1"
solana-sdk = { version = "2.1", features = ["program"] }
solana-security-txt = "1.1.1"
tokio = { version = "1", features = ["test-util"] }
