[workspace]
members = [
    "priority-fee-distribution-cli",
    "programs/*",
    "tip-distribution-cli",
    "tip-payment-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.10"
authors = ["Jito Network <team@jito.network>"]
repository = "https://github.com/jito-foundation/jito-programs"
homepage = "https://jito.network"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
agave-feature-set = "2.2"
anchor-lang = { version = "0.31.1" }
anyhow = "1.0.100"
bincode = "1.3.3"
bs58 = "0.5.1"
clap = "4.5.53"
jito-priority-fee-distribution = { path = "programs/priority-fee-distribution", version = "=0.1.10", features = ["no-entrypoint", "no-idl"] }
jito-priority-fee-distribution-sdk = { path = "programs/priority-fee-distribution-sdk", version = "0.1.10" }
jito-programs-vote-state = { path = "programs/vote-state", version = "=0.1.10" }
jito-tip-distribution = { path = "programs/tip-distribution", version = "=0.1.10", features = ["no-entrypoint", "no-idl"] }
jito-tip-distribution-sdk = { path = "programs/sdk" }
jito-tip-payment = { path = "programs/tip-payment", version = "=0.1.10" }
proc-macro2 = "=1.0.95"
serde = "1.0.138"
serde_derive = "1.0.103"
solana-client = "2.2"
solana-program = "2.2"
solana-program-test = "2.2"
solana-sdk = { version = "2.2", features = ["program"] }
solana-sdk-ids = "2.2"
solana-security-txt = "1.1.1"
tokio = { version = "1", features = ["test-util"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
incremental = false
