[package]
name = "update_merkle_root_authority"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { path = "../../anchor/lang" }
clap = { version = "3.2.5", features = ["derive", "env"] }
env_logger = "0.9.0"
futures = "0.3.21"
im = "15.1.0"
itertools = "0.10.3"
log = "0.4.17"
num-traits = "0.2.15"
serde = "1.0.137"
serde_json = "1.0.81"
solana-client = { path = "../../client" }
solana-program = { path = "../../sdk/program"}
solana-sdk = { path = "../../sdk" }
thiserror = "1.0.31"
tip-distribution = { path = "../tip-payment/programs/tip-distribution", features = ["no-entrypoint"] }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros", "sync", "time", "full"] }

[[bin]]
name = "update-merkle-root-authority"
path = "src/bin/update_merkle_root_authority.rs"
