[package]
name = "claim-mev"
description = "Claim MEV CLI"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.25.0"
anchor-lang = "0.25.0"
clap = { version = "3.2.5", features = ["derive", "env"] }
csv = "1.1.6"
log = "0.4.17"
regex = "1.6.0"
serde = "1.0.137"
serde_json = "1.0.81"
solana-cli-config = "~1.10.33"
solana-client = "~1.10.33"
solana-merkle-tree = { path = "../../tip-payment/programs/merkle-tree" }
solana-program = "~1.10.33"
solana-sdk = "~1.10.33"
thiserror = "1.0.31"
tip-distribution = { path = "../../tip-payment/programs/tip-distribution", features = ["no-entrypoint"] }
