[package]
name = "priority-fee-distribution-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.30.1"
anyhow = "1.0"
bs58 = "0.5.1"
clap = { version = "=4.0", features = ["derive"] }
jito-priority-fee-distribution = { path = "../programs/priority-fee-distribution", features = ["no-entrypoint"] }
jito-priority-fee-distribution-sdk = { path = "../programs/priority-fee-distribution-sdk" }
solana-client = "1.18"
solana-sdk = "1.18" 
