[package]
name = "priority-fee-distribution-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
jito-priority-fee-distribution = { workspace = true, features = ["no-entrypoint"] }
jito-priority-fee-distribution-sdk = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
