[package]
name = "priority-fee-distribution-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Priority fee distribution CLI"

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
jito-priority-fee-distribution = { workspace = true, features = ["no-entrypoint"] }
jito-priority-fee-distribution-sdk = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
