[package]
name = "tip-distribution-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.31.1"
anyhow = "1.0"
bs58 = "0.5.1"
clap = { version = "=4.0", features = ["derive"] }
jito-tip-distribution = { path = "../programs/tip-distribution", features = ["no-entrypoint"] }
jito-tip-distribution-sdk = { path = "../programs/sdk" }
solana-client = "2.1"
solana-sdk = "2.1" 
