[package]
name = "tip-distribution-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Tip distribution CLI"

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
jito-tip-distribution = { workspace = true, features = ["no-entrypoint"] }
jito-tip-distribution-sdk = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
