[package]
name = "initialize-tip-distribution"
version = "0.1.0"
description = "Initialize tip distribution"
edition = "2021"

[dependencies]
anchor-client = "0.25.0"
anchor-lang = "0.25.0"
clap = { version = "3.2.23", features = ["derive", "env"] }
tip-distribution = { path = "../programs/tip-distribution", features = ["no-entrypoint"] }
solana-client = "=1.10.33"
solana-sdk = "=1.10.33"
