[package]
name = "jito-priority-fee-distribution-sdk"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Priority fee distribution SDK"

[dependencies]
anchor-lang = { workspace = true }
jito-priority-fee-distribution = { workspace = true, features = ["no-entrypoint"] }
