[package]
name = "jito-priority-fee-distribution"
version = "0.1.5"
description = "Priority fee distribution program, responsible for distributing funds to entitled parties."
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_priority_fee_distribution"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
jito-programs-vote-state = { path = "../vote-state" }
solana-program = "1.18"
solana-security-txt = "1.1.1"