[package]
name = "jito-priority-fee-distribution"
version = "0.1.6"
description = "Priority fee distribution program, responsible for distributing funds to entitled parties."
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_priority_fee_distribution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = "0.31.1"
jito-programs-vote-state = { path = "../vote-state" }
solana-program = "2.2"
solana-security-txt = "1.1.1"
