[package]
name = "jito-priority-fee-distribution"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Priority fee distribution program, responsible for distributing funds to entitled parties."

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_priority_fee_distribution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { workspace = true }
jito-programs-vote-state = { workspace = true }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }