[package]
name = "jito-tip-distribution-sdk"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
description = "Tip distribution SDK"

[dependencies]
anchor-lang = { workspace = true }
jito-tip-distribution = { workspace = true }
