[package]
name = "jito-tip-distribution"
version = "0.1.5"
description = "Tip distribution program, responsible for distributing funds to entitled parties."
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_tip_distribution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { workspace = true }
jito-programs-vote-state = { workspace = true }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }
