[package]
name = "jito-tip-distribution"
description = "Tip distribution program, responsible for distributing funds to entitled parties."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_tip_distribution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { workspace = true }
jito-programs-vote-state = { workspace = true }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }
