[package]
name = "jito-tip-payment"
version = "0.1.5"
description = "Tip Payment Program"
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_tip_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
solana-security-txt = "1.1.1"
