[package]
name = "jito-tip-payment"
description = "Tip Payment Program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_tip_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-security-txt = { workspace = true }

[dev-dependencies]
agave-feature-set = { workspace = true }
jito-tip-distribution = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
