[package]
name = "jito-tip-payment"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Tip Payment Program"

[lib]
crate-type = ["cdylib", "lib"]
name = "jito_tip_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-security-txt = { workspace = true }

[dev-dependencies]
agave-feature-set = { workspace = true }
jito-tip-distribution = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
