[package]
name = "jito-programs-vote-state"
version = "0.1.5"
edition = "2021"
description = "VoteState code copied from Solana."
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[dependencies]
anchor-lang = { path = "../../../../anchor/lang" }
bincode = "1.3.3"
serde = "1.0.138"
serde_derive = "1.0.103"
solana-program = { version = "=2.2.0" }
