[package]
name = "jito-programs-vote-state"
version = "0.1.5"
edition = "2021"
description = "VoteState code copied from Solana."
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[dependencies]
anchor-lang = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
