[package]
name = "jito-programs-vote-state"
description = "VoteState code copied from Solana."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
