[package]
name = "payment-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_vault"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.2"
anchor-spl = "0.16.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }