[package]
name = "tip-payment"
version = "0.1.0"
description = "Tip Payment Program"
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = { path = "../../../../anchor/lang" }
