[package]
name = "claim-mev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.25.0"
anchor-client = "0.25.0"
clap = {version = "3.2.5", features = ["derive", "env"]}
tip-distribution = {path = "../tip-distribution", features = ["no-entrypoint"]}
solana-cli-config = "~1.10.33"
solana-client = "~1.10.33"
solana-genesis-utils = "~1.10.33"
solana-ledger = "~1.10.33"
solana-merkle-tree = {path = "../merkle-tree"}
solana-program = "~1.10.33"
solana-runtime = "~1.10.33"
solana-sdk = "~1.10.33"
serde = "1.0.137"
serde_json = "1.0.81"
log = "0.4.17"
bigdecimal = "0.3.0"
num-traits = "0.2.15"
thiserror = "1.0.31"
fast-math = "0.1"
