[package]
name = "tip-distribution"
version = "0.1.0"
description = "Tip distribution program, responsible for distributing funds to entitled parties."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_distribution"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { path = "../../../../anchor/lang" }
solana-program = { path = "../../../../sdk/program" }
vote-state = { path = "../vote-state" }
