[package]
name = "jito-tip-distribution"
version = "0.1.1"
description = "Tip distribution program, responsible for distributing funds to entitled parties."
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_distribution"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
solana-program = "~1.10.29"
jito-programs-vote-state = "0.1.1-alpha.4"
