[package]
name = "tip-distribution"
version = "0.1.0"
description = "Tip distribution program, responsible for distributing funds to entitled parties."
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_distribution"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { path = "../../../../anchor/lang" }
solana-program = { path = "../../../../sdk/program" }
jito-programs-vote-state = { path = "../vote-state" }
