[package]
name = "tip-payment"
version = "0.1.0"
description = "Tip Payment Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { rev = "54752ed4d3f56f998c6956b69d85a776331eaaf3", git = "https://github.com/jito-labs/anchor.git" }

