[package]
name = "tip-payment"
version = "0.1.1-alpha.0"
description = "Tip Payment Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = "0.25.0"
